sass/_layout.sass
@use "_base" as *

html
  scroll-behavior: smooth

body
  margin: 0
  display: flex
  flex-direction: column

.content
  flex: 1 0 auto

main
  max-width: $max-one-col-width
  width: 90%
  margin: auto

footer
  margin-top: 2em
  padding: 1.5em 2em
  flex-shrink: 0

// offset anchors
:target:before
  content: ""
  display: block
  height: calc(1em * 2 + 1.1em)
  margin: calc(-1em * 2 - 1.1em) 0 0 0

img
  max-width: 100%

hr
  border: none
  border-top: 2px solid $heading-color
  margin: 3em 6em

